power save blocker: Don't try to block power saving in headless mode

When running headless mode, there's no need to block power saving as
there is no available display server. This patch makes PowerSaveBlocker
early-out in such a case (on X11).

BUG=678948

Review-Url: https://codereview.chromium.org/2631153003
Cr-Commit-Position: refs/heads/master@{#444118}

Former-commit-id: 28b1bf2e4e780f510109ca4b1d61e72f024232aa